Refactor Gradle build files for consistency and clarity